Fix current game client layout (#122)
* initial working on mobile

* hard code width of add player button (shameful)

* style player scrollbar

* add middleware which adds viewport to path

* remove conditional hiding of red team on small screens

* add WrapChildrenInSwiperIfMobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .player-scrollbar::-webkit-scrollbar {
+    width: 7px;
+  }
+
+  .player-scrollbar::-webkit-scrollbar-track {
+    margin-top: 1.5em;
+    margin-bottom: 1.5em;
+    border-radius: 4px;
+    background-color: #ffffff;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  .player-scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: #a7a7a7;
+  }
+
+  .player-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #7c7c7c;
+  }
+}
